--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "socket.io": "^4.0.0"
+  },
+  "devDependencies": {
+    "copy-webpack-plugin": "^8.1.0",
+    "webpack": "^5.30.0",
+    "webpack-cli": "^4.6.0"
   }
 }
