--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "socket.io": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^8.1.0",
     "webpack": "^5.30.0",
     "webpack-cli": "^4.6.0"
