--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "run-s clean build:*",
+    "build:webpack": "webpack",
+    "clean": "rimraf ./dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "NaomiatLibrary",
@@ -17,6 +20,8 @@
     "@babel/preset-env": "^7.13.12",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^8.1.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
     "webpack": "^5.30.0",
     "webpack-cli": "^4.6.0"
   }
