--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ static/helvetiker_bold.typeface.json
 curlingenv/__pycache__
 .ipynb_checkpoints
 /logs
-*.pt
 /__pycache__
 *.ipynb
 graphs/*
 dist/*
+models/*
