--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,9 +1,10 @@
 FROM node:14 AS node-build
 WORKDIR /src
 COPY js js
-COPY static static
-COPY webpack.config.js package.json ./
+COPY package.json ./
 RUN npm install
+COPY webpack.config.js ./
+COPY static static
 RUN npm run build
 
 FROM python:3.7
