--- a/deploy/Dockerfile.web
+++ b/deploy/Dockerfile.web
@@ -11,9 +11,11 @@ FROM python:3.7
 WORKDIR /usr/src/app
 
 ENV PYTHONUNBUFFERED 1
+ENV APP_DEBUG 0
 RUN pip install --upgrade pip
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+
 
 COPY src src
 RUN cd src && python setup.py build_ext --inplace
