--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "three": "^0.127.0"
   },
   "devDependencies": {
+    "@types/three": "^0.127.1",
     "copy-webpack-plugin": "^8.1.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
