--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
         "target": "es5",
         "module": "es2015",
         "outDir": "./dist",
-        "strict": false,
+        "strict": true,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
+        "noPropertyAccessFromIndexSignature": true,
         "moduleResolution": "node",
         "esModuleInterop": true,
         "skipLibCheck": true,
