--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       context: .
       dockerfile: Dockerfile
     working_dir: '/usr/src/app'
-    command: python src/eval_obs.py
+    command: python src/eval_obs_picture.py
     tty: true
     volumes:
       - ./models:/usr/src/app/models
