feat: github actionsでdockerコンテナをビルドする

--- a/deploy/build
+++ b/deploy/build
@@ -1,5 +1,5 @@
 #!/bin/bash
 set -eu
 cd `dirname $0`
-docker build -f Dockerfile.web -t gameai-web ..
+docker build -f Dockerfile.web -t gameai-app ..
 docker build -f Dockerfile.nginx -t gameai-nginx ..
