--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    image: gameai-web
+    image: gameai-app
     volumes:
       - ../models:/usr/src/app/models
   nginx:
