--- a/deploy/Dockerfile.web
+++ b/deploy/Dockerfile.web
@@ -3,7 +3,7 @@ WORKDIR /src
 COPY package.json ./
 RUN npm install
 COPY webpack.config.js ./
-COPY js js
+COPY ts ts
 COPY static static
 RUN npm run build
 
