--- a/deploy/Dockerfile.web
+++ b/deploy/Dockerfile.web
@@ -2,7 +2,7 @@ FROM node:14 AS node-build
 WORKDIR /src
 COPY package.json ./
 RUN npm install
-COPY webpack.config.js ./
+COPY webpack.config.js tsconfig.json ./
 COPY ts ts
 COPY static static
 RUN npm run build
