--- a/deploy/Dockerfile.nginx
+++ b/deploy/Dockerfile.nginx
@@ -1,4 +1,13 @@
+FROM node:14 AS node-build
+WORKDIR /src
+COPY package.json ./
+RUN npm install
+COPY webpack.config.js tsconfig.json ./
+COPY ts ts
+COPY static static
+RUN npm run build
+
 FROM  nginx:1.13
 
 COPY deploy/nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf
-COPY dist /dist
+COPY --from=node-build /src/dist dist
