--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -28,3 +28,22 @@ jobs:
         working-directory: ./deploy
         env:
           DOCKER_TAG: ${{ github.sha }}
+      - name: edit Dockerrun.aws.json
+        run: sed -i s/docker_image_tag/${{ github.sha }}/ Dockerrun.aws.json
+        working-directory: ./deploy
+      - name: Generate deployment package
+        run: zip eb.zip Dockerrun.aws.json
+        working-directory: ./deploy
+      - name: Deploy to Elastic Beanstalk
+        uses: einaregilsson/beanstalk-deploy@v14
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          application_name: gameai
+          environment_name: Gameai-env
+          version_label: ${{ github.sha }}
+          region: ap-northeast-1
+          deployment_package: ./deploy/eb.zip
+          wait_for_deployment: false
+          version_description: ${{ github.event.head_commit.message }}
+          use_existing_version_if_available: true
