feat: dockerビルドの高速化を試みる

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -22,6 +22,8 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
       - name: Build docekr containers
         run: ./build
+        env:
+          DOCKER_BUILDKIT: 1
         working-directory: ./deploy
       - name: Push docker containers to ECR
         run: ./push
