--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "NaomiatLibrary",
   "license": "MIT",
   "dependencies": {
+    "chart.js": "^2.9.4",
     "express": "^4.17.1",
     "socket.io-client": "^4.0.1",
     "three": "^0.127.0"
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.32",
     "@types/three": "^0.127.1",
     "copy-webpack-plugin": "^8.1.0",
     "npm-run-all": "^4.1.5",
